<resources>
    <string name="app_name">Roommates</string>

    <string name="kait_text">Kait was here</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_help">Help &amp; feedback</string>
    <string name="title_activity_navigation_drawer_main">NavigationDrawerMain</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
