<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.awfulname.roommates.NavigationDrawerMain">
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_sync_black_24dp"
        android:showAsAction="ifRoom"   />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:showAsAction="never"   />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:showAsAction="never" />
    <item android:id="@+id/action_signout"
        android:title="@string/action_signout"
        android:showAsAction="never" />
</menu>
